--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <link rel="stylesheet" href="./style/solutionMVNX.css" >
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <meta name=”viewport” content=”width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
     </head>
     <body>
         <nav class="fixed-top navbar navbar-expand-lg navbar-light backgrouns-color-pista z-index nav-bar-back-ground">
             <div class="container">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#"><img src="./assets/csmart_logo_whitecloud.svg" class="logo-size"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -19,22 +21,22 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Product <span class="sr-only">(current)</span></a>
+                    <a class="nav-link font-family-1 " href="#">Product <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Solutions</a>
+                    <a class="nav-link font-family-1 " href="#">Solutions</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Insights</a>
+                    <a class="nav-link font-family-1 " href="#">Insights</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Support</a>
+                    <a class="nav-link font-family-1 " href="#">Support</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Partner Network</a>
+                    <a class="nav-link font-family-1 " href="#">Partner Network</a>
                 </li>
                 <li>
-                    <button type="button" class="btn btn-primary round-button">BUILD YOUR USE CASE</button>
+                    <button type="button" class="btn btn-primary round-button font-family-1">BUILD YOUR USE CASE</button>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -44,20 +46,18 @@
             </div>
             </div>
         </nav>
-        <div class="topImage mt-5">
-            <div class="container">
-                <div class="row d-flex justify-content-between">
-                    <div class="col-lg-6 col-md-4 col-sm-6 col-xs-12 z-index d-flex flex-column justify-content-center pad-sol">
-                        <label class="font-size-1 font-weigth line-height-1">
-                            MVNX
-                        </label>
-                        <label class="font-size-2">
-                            CSP 2 DSP - Digital Disruption
-                        </label>
+        <div class="ban1-div d-flex flex-column ">
+            <img src="assets/bg-mage.svg" class="ban-img">
+            
+            <div class=" ban1-sub-div d-flex align-items-center">
+                <div class="container">
+                    <div class="row d-flex flex-column">
+                        <h1 class="font-bold text-color-4 ">MVNX</h1>
+                        <h3 class="text-color-4">CSP 2 DSP - Digital Disruption</h3>
                     </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mobile-bg z-index"></div>
                 </div>
             </div>
+            
         </div>    
         <div class="belowImage backgrouns-color-white mt-5">
             <div class="container cus-pad-1">
