--- a/index.html
+++ b/index.html
@@ -59,86 +59,88 @@
             </div>
             
         </div>    
-        <div class="belowImage backgrouns-color-white mt-5">
-            <div class="container cus-pad-1">
-                <div class="row d-flex justify-content-between align-items-center non-skew-2 z-index">
-                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 d-flex flex-column justify-content-center pad-sol">
+        <div class="backgrouns-color-white">
+            <div class="container">
+                <div class="row d-flex justify-content-between align-items-center mt-3">
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
                         <div class="d-flex flex-column">
-                            <label class="font-size-2">
+                            <h4 class="font-bold-600 text-color-4">
                                 1300 active MVNOs operating in 79 countries
                                 representing 2 Billion+ mobile connections
-                            </label>
-                            <label>
-                                Operators should expand beyond connectivity into service enablement and/or end-to-end service provision, to create significant value; Content consumption, particularly video, is rising. Mobile is a key driver, with more people watching video on their devices for longer and more frequently. Connectivity will be commoditized; value generation lies in the applications, platforms, and services layer.
-                                Operators should expand beyond connectivity into service enablement and/or end-to-end service provision, to create significant value; Content consumption, particularly video, is rising. Mobile is a key driver, with more people watching video on their devices for longer and more frequently. Connectivity will be commoditized; value generation lies in the applications, platforms, and services layer.
-                            </label>
+                            </h4>
+                            <div class="mt-3">
+                                <p class="text-color-5 font-family-1 ">
+                                    Operators should expand beyond connectivity into service enablement and/or end-to-end service provision, to create significant value; Content consumption, particularly video, is rising. Mobile is a key driver, with more people watching video on their devices for longer and more frequently. Connectivity will be commoditized; value generation lies in the applications, platforms, and services layer.
+                                    Operators should expand beyond connectivity into service enablement and/or end-to-end service provision, to create significant value; Content consumption, particularly video, is rising. Mobile is a key driver, with more people watching video on their devices for longer and more frequently. Connectivity will be commoditized; value generation lies in the applications, platforms, and services layer.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 h-100 z-index d-flex flex-column align-items-end justify-content-center">
-                        <div class="com-bg-image z-index"></div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 d-flex flex-column align-items-end justify-content-center">
+                        <div class="com-bg-image"></div>
                     </div>
                 </div>  
-                <div class="row d-flex justify-content-between align-items-center non-skew-3 z-index">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 d-flex flex-column justify-content-center pad-sol">
+                <div class="row d-flex justify-content-between align-items-center ">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
                         <div class="d-flex flex-column">
-                            <label class="font-size-2">
+                            <h2 class="font-bold-600 text-color-4">
                                 How can we help
-                            </label>
-                            <label>
+                            </h2>
+                            <p class="text-color-5 font-family-1 ">
                                 We at Covalensedigital are thinking a step ahead by providing customers handpicked industry solutions meeting your needs be it Convergent or Platform Solutions at your back yard or on cloud creating cloud-native solutions allowing you to replicate at multiple geographies faster than your board room can think.    
-                            </label>
+                            </p>
                         </div>
                     </div>
                 </div> 
-                <div class="row d-flex justify-content-between align-items-center non-skew-3 z-index">
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 d-flex flex-column justify-content-center pad-sol h-100">
-                        <div class="w-90 h-90">
+                <div class="row d-flex justify-content-between align-items-center">
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
+                        <div>
                             <diV class="bg-circle-chip-1"></diV>
-                            <div>
-                                <label class="font-size-2">
+                            <div class="mt-2">
+                                <h5 class="font-bold-600 text-color-4">
                                     Subscribe
-                                </label>
+                                </h5>
                             </div>
                             <div>
-                                <label>
+                                <p class="text-color-5 font-family-1 ">
                                     Onboard your customer at the touch of a button, give them and concept to cash to care journey with unlimited services and one bill approach
-                                </label>
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 d-flex flex-column justify-content-center pad-sol h-100">
-                        <div class="w-90 h-90">
-                            <diV class="bg-circle-chip-1"></diV>
-                            <div>
-                                <label class="font-size-2">
-                                    Subscribe
-                                </label>
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
+                        <div>
+                            <diV class="bg-circle-chip-2"></diV>
+                            <div class="mt-2">
+                                <h5 class="font-bold-600 text-color-4">
+                                    Monitize
+                                </h5>
                             </div>
                             <div>
-                                <label>
+                                <p class="text-color-5 font-family-1 ">
                                     Onboard your customer at the touch of a button, give them and concept to cash to care journey with unlimited services and one bill approach
-                                </label>
+                                </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 d-flex flex-column justify-content-center pad-sol h-100">
-                       <div class="w-90 h-90">
-                            <diV class="bg-circle-chip-1"></diV>
-                            <div>
-                                <label class="font-size-2">
-                                    Subscribe
-                                </label>
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
+                        <div>
+                            <diV class="bg-circle-chip-3"></diV>
+                            <div class="mt-2">
+                                <h5 class="font-bold-600 text-color-4">
+                                    Analyze
+                                </h5>
                             </div>
                             <div>
-                                <label>
+                                <p class="text-color-5 font-family-1 ">
                                     Onboard your customer at the touch of a button, give them and concept to cash to care journey with unlimited services and one bill approach
-                                </label>
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row d-flex justify-content-between align-items-center non-skew-3 z-index">
-                    <button type="button" class="btn backgrouns-color-green-2 text-color-2 round-button">TALK TO US</button>   
+                <div class="row d-flex justify-content-between align-items-center ">
+                    <button type="button" class="btn backgrouns-color-green-2 text-color-2 round-button font-family-1">TALK TO US</button>   
                 </div>
             </div>
         </div>
@@ -239,7 +241,7 @@
                         </div>
                     </div> 
                     <div class="row d-flex justify-content-between align-items-center non-skew-3 z-index">
-                        <button type="button" class="btn backgrouns-color-white text-color-3 round-button">CONTACT US</button>   
+                        <button type="button" class="btn backgrouns-color-white text-color-3 round-button font-family-1">CONTACT US</button>   
                     </div>
                 </div>
             </div>
@@ -265,7 +267,7 @@
                                 <span class="check-mark"></span>Business houses need customers delivered to their doorstep and they are willing to pay it
                             </label>
                             <div class="d-flex justify-content-between align-items-center z-index">
-                                <button type="button" class="btn backgrouns-color-green-2 text-color-2 round-button">TALK TO US</button>   
+                                <button type="button" class="btn backgrouns-color-green-2 text-color-2 round-button font-family-1">TALK TO US</button>   
                             </div>
                         </div>
                         
