--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-    <nav class="fixed-top navbar navbar-expand-lg navbar-light backgrouns-color-pista z-index nav-bar-back-ground">
+    <nav class="fixed-top navbar navbar-expand-lg navbar-light backgrouns-color-pista nav-bar-back-ground">
         <div class="container">
         <a class="navbar-brand" href="#"><img src="./assets/csmart_logo_whitecloud.svg" class="logo-size"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
         </div>
         </div>
     </nav>
-    <div class="ban1-div d-flex flex-column ">
+    <div class="ban1-div d-flex flex-column mt-5">
         <img src="assets/bg-mage.svg" class="img-fluid">  
         <div class=" ban1-sub-div d-flex align-items-center">
             <div class="container">
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 d-flex flex-column align-items-end justify-content-center">
+                <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12 d-flex flex-column align-items-end justify-content-center">
                     <img src="./assets/communication.svg" class="img-fluid" >
                 </div>
             </div>  
@@ -95,49 +95,49 @@
                 </div>
             </div> 
             <div class="row d-flex justify-content-between align-items-center">
-                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
-                    <div>
-                        <diV class="bg-circle-chip-1"></diV>
+                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 d-flex flex-column justify-content-center" >
+                    <div class="center-chip d-flex flex-column">
+                        <div class="bg-circle-chip-1"></div>
                         <div class="mt-2">
                             <h5 class="font-bold-600 text-color-4">
                                 Subscribe
                             </h5>
                         </div>
-                        <div>
-                            <p class="text-color-5 font-family-1 ">
-                                Onboard your customer at the touch of a button, give them and concept to cash to care journey with unlimited services and one bill approach
-                            </p>
-                        </div>
+                    </div>
+                    <div>
+                        <p class="text-color-5 font-family-1 ">
+                            Onboard your customer at the touch of a button, give them and concept to cash to care journey with unlimited services and one bill approach
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
-                    <div>
+                    <div class="center-chip d-flex flex-column">
                         <diV class="bg-circle-chip-2"></diV>
                         <div class="mt-2">
                             <h5 class="font-bold-600 text-color-4">
                                 Monitize
                             </h5>
                         </div>
-                        <div>
-                            <p class="text-color-5 font-family-1 ">
-                                Onboard your customer at the touch of a button, give them and concept to cash to care journey with unlimited services and one bill approach
-                            </p>
-                        </div>
+                    </div>
+                    <div>
+                        <p class="text-color-5 font-family-1 ">
+                            Onboard your customer at the touch of a button, give them and concept to cash to care journey with unlimited services and one bill approach
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
-                    <div>
+                    <div class="center-chip d-flex flex-column">
                         <diV class="bg-circle-chip-3"></diV>
                         <div class="mt-2">
                             <h5 class="font-bold-600 text-color-4">
                                 Analyze
                             </h5>
                         </div>
-                        <div>
-                            <p class="text-color-5 font-family-1 ">
-                                Onboard your customer at the touch of a button, give them and concept to cash to care journey with unlimited services and one bill approach
-                            </p>
-                        </div>
+                    </div>
+                    <div>
+                        <p class="text-color-5 font-family-1 ">
+                            Onboard your customer at the touch of a button, give them and concept to cash to care journey with unlimited services and one bill approach
+                        </p>
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                         </div>
                     </div> 
                     <div class="row d-flex justify-content-between">
-                        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 d-flex flex-column align-items-start justify-content-center">
+                        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 d-flex flex-column align-items-center justify-content-center">
                             <img src="./assets/communication.svg" class="img-fluid">
                         </div>
                         <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 d-flex flex-column">
