--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <img src="assets/bg-mage.svg" class="img-fluid">  
         <div class=" ban1-sub-div d-flex align-items-center">
             <div class="container">
-                <div class="row d-flex flex-column">
+                <div class="d-flex flex-column">
                     <h1 class="font-bold text-color-4 ">MVNX</h1>
                     <h3 class="text-color-4">CSP 2 DSP - Digital Disruption</h3>
                 </div>
@@ -184,7 +184,7 @@
                         </div>
                     </div>
                     <div class="row d-flex justify-content-between">
-                        <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 d-flex flex-column">
+                        <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 d-flex flex-column order-lg-0 order-md-1 order-sm-1 order-1">
                             <div class="d-flex flex-column">
                                 <h5 class="font-bold text-color-4">
                                     Real-time Charging
@@ -203,7 +203,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 d-flex flex-column align-items-end justify-content-center">
+                        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 d-flex flex-column align-items-end justify-content-center order-lg-1 order-md-0 order-sm-0 order-0">
                             <img src="./assets/world-guru.svg" class="img-fluid">
                         </div>
                     </div>
@@ -233,7 +233,97 @@
             </div>
         </div>
     </div>
+    <div>
+        <div class="backgrouns-color-green pt-5 pb-5 skew-6">
+            <div class="bg-img-mvnx-div-3 d-flex justify-content-between ">
+                <div class="container pt-5">
+                    <div class="non-skew-6">
+                        <div class="row d-flex justify-content-between align-items-center pt-3">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
+                                <div class="d-flex flex-column">
+                                    <label class="font-size-2 text-color-2">
+                                        Want to learn more about how can
+                                    </label>
+                                    <label class="font-size-2 text-color-2">
+                                        cSMART MVNX help transform your business?  
+                                    </label>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="d-flex justify-content-between align-items-center">
+                            <button type="button" class="btn backgrouns-color-white text-color-3 round-button font-family-1">CONTACT US</button>   
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+    </div>
+    <div class="backgrouns-color-white pt-5 pb-5">
+        <div class="container pt-5">
+            <div class="row d-flex justify-content-between">
+                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 d-flex flex-column align-items-start justify-content-start">
+                    <!-- <div class="com-bg-image-bit"></div> -->
+                    <img src="./assets/Group 21340.jpg" class="img-fluid">
+                </div>
+                <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 d-flex flex-column mt-3">
+                    <div class="d-flex flex-column">
+                        <h6 class="text-color-4 ">
+                            Insights / Blogs 
+                        </h6>
+                        <h4 class="font-bold-600 text-color-4 ">
+                            How cSMART can transform the subscription business
+                        </h4>
+                        <p class="text-color-5 font-family-1 ">
+                            The subscription economy is growing. Digital transformation is reshaping broad changes within telecoms operations as Communications Service Providers (CSPs) continue to evolve into Digital Service Providers (DSPs). As service providers shift from physical products to digital services, they will need to rapidly design and monetize offerings across cloud, IoT, and future 5G services.
+                        </p>
+                        <div class="d-flex justify-content-between align-items-center z-index">
+                            <button type="button" class="btn backgrouns-color-green-2 text-color-2 round-button font-family-1">READ MORE</button>   
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="belowImage-bottom" style="background-color: #f5f5f5;">
+        <div class="container cus-pad-2">
+            <div class="row d-flex z-index ">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 h-100 z-index d-flex flex-column align-items-start justify-content-start pr-0 pl-0 mt-3">
+                    <div class="d-flex flex-column w-100">
+                        <div class="logo-footer"></div>
+                        <div class="d-flex flex-row mt-3 w-100">
+                            <a href="#" class="social"><div class="linked-in"></div></a>
+                            <a href="#" class="social"><div class="facebook"></div></a>
+                            <a href="#" class="social"><div class="twitter"></div></a>
+                            <a href="#" class="social"><div class="youtube"></div></a>
+                            <a href="#" class="social"><div class="insta"></div></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 d-flex flex-column pad-sol mt-3">
+                    <div class="d-flex flex-row justify-content-between h-100 w-99 last-div-h">
+                        <div class="d-flex flex-column h-100">
+                            <a href="#">Footer Link 1</a>
+                            <a href="#">Footer Link 1</a>
+                            <a href="#">Footer Link 1</a>
+                        </div>
+                        <div class="d-flex flex-column h-100">
+                            <a href="#">Footer Link 1</a>
+                            <a href="#">Footer Link 1</a>
+                            <a href="#">Footer Link 1</a>
+                        </div>
+                        <div class="d-flex flex-column h-100">
+                            <a href="#">Footer Link 1</a>
+                            <a href="#">Footer Link 1</a>
+                            <a href="#">Footer Link 1</a>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div> -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
