--- a/index.html
+++ b/index.html
@@ -328,14 +328,14 @@
             </div>
         </div>
     </div>
-    <div class="backgrouns-color-violet-1">
+    <div class="backgrouns-color-violet-1 p-2">
         <div class="container d-flex flex-row justify-content-between" >
             <div class="col-xl-6 col-lg-8 col-md-12 col-sm-12 col-xs-12 row d-flex align-items-center">
-                <span class="mr-2 pr-2 mb-2 footer-link">About Us</span>
-                <span class="mr-2 pr-2 mb-2  footer-link">Contact Us</span>
-                <span class="mr-2 pr-2 mb-2  footer-link">Terms of Use</span>
-                <span class="mr-2 pr-2 mb-2  footer-link">Privacy Policy</span>
-                <span class="mr-2 pr-2 mb-2  footer-link">Disclamer</span>
+                <a href="#" class="mr-2 pr-2 mb-2 footer-link text-color-2">&#169;cSMART 2020 </a>
+                <a href="#" class="mr-2 pr-2 mb-2  footer-link text-color-2">Covalensedigital</a>
+                <a href="#" class="mr-2 pr-2 mb-2  footer-link text-color-2">Privacy Policy</a>
+                <a href="#" class="mr-2 pr-2 mb-2  footer-link text-color-2">Disclamer</a>
+                <a href="#" class="mr-2 pr-2 mb-2  footer-link text-color-2">Site Map</a>
             </div>
         </div>
     </div>
