--- a/index.html
+++ b/index.html
@@ -325,20 +325,20 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 d-flex flex-row  mt-3">
                         <div class="col-lg-12 col-md-12 col-sm-6 col-xs-6 col-6 row d-flex flex-row justify-content-between w-100">
-                            <div class="d-flex flex-column mb-3">
-                                <a href="#">Footer Link 1</a>
-                                <a href="#">Footer Link 1</a>
-                                <a href="#">Footer Link 1</a>
+                            <div class="d-flex flex-column ">
+                                <a href="#" class="footer-link2">Footer Link 1</a>
+                                <a href="#" class="footer-link2">Footer Link 1</a>
+                                <a href="#" class="footer-link2">Footer Link 1</a>
                             </div>
-                            <div class="d-flex flex-column mb-3">
-                                <a href="#">Footer Link 1</a>
-                                <a href="#">Footer Link 1</a>
-                                <a href="#">Footer Link 1</a>
+                            <div class="d-flex flex-column ">
+                                <a href="#" class="footer-link2">Footer Link 1</a>
+                                <a href="#" class="footer-link2">Footer Link 1</a>
+                                <a href="#" class="footer-link2">Footer Link 1</a>
                             </div>
-                            <div class="d-flex flex-column mb-3">
-                                <a href="#">Footer Link 1</a>
-                                <a href="#">Footer Link 1</a>
-                                <a href="#">Footer Link 1</a>
+                            <div class="d-flex flex-column ">
+                                <a href="#" class="footer-link2">Footer Link 1</a>
+                                <a href="#" class="footer-link2">Footer Link 1</a>
+                                <a href="#" class="footer-link2">Footer Link 1</a>
                             </div>
                         </div>
                         
