--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   </head>
   <body>
     <nav class="fixed-top navbar navbar-expand-lg navbar-light backgrouns-color-pista nav-bar-back-ground">
-        <div class="container">
-        <a class="navbar-brand" href="#"><img src="./assets/csmart_logo_whitecloud.svg" class="logo-size"></a>
-        <button class="navbar-toggler  " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="container d-flex align-items-end">
+            <a class="navbar-brand pb-2" href="#"><img src="./assets/csmart_logo_whitecloud.svg" class="logo-size"></a>
+            <button class="navbar-toggler  " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
     
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="height: 100%!important;">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
                 <a class="nav-link font-family-1 " href="#">Product <span class="sr-only">(current)</span></a>
@@ -47,7 +47,7 @@
                 <button type="button" class="btn round-button font-family-1 blue-button pl-4 pr-4">BUILD YOUR USE CASE</button>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <form class="form-inline my-2 my-lg-0 pb-2">
             <div class="search" id="search_wrapper">
                 <input id="search-box">
                 <i id="search_icon" class="fa fa-search headersearch"></i>
