--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             <div class="row d-flex justify-content-between align-items-center mt-3">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
                     <div class="d-flex flex-column">
-                        <h4 class="font-bold-600 text-color-4">
+                        <h2 class="font-bold-600 text-color-4">
                             1300 active MVNOs operating in 79 countries
                             representing 2 Billion+ mobile connections
-                        </h4>
+                        </h2>
                         <div class="mt-3">
                             <p class="text-color-5 font-family-1 ">
                                 Operators should expand beyond connectivity into service enablement and/or end-to-end service provision, to create significant value; Content consumption, particularly video, is rising. Mobile is a key driver, with more people watching video on their devices for longer and more frequently. Connectivity will be commoditized; value generation lies in the applications, platforms, and services layer.
@@ -131,7 +131,7 @@
                     <div class="center-chip d-flex flex-column">
                         <div class="bg-circle-chip-1"></div>
                         <div class="mt-2">
-                            <h5 class="font-bold-600 text-color-4">
+                            <h5 class="font-bold-600 text-color-4 tex-cen-sm">
                                 Subscribe
                             </h5>
                         </div>
@@ -146,7 +146,7 @@
                     <div class="center-chip d-flex flex-column">
                         <diV class="bg-circle-chip-2"></diV>
                         <div class="mt-2">
-                            <h5 class="font-bold-600 text-color-4">
+                            <h5 class="font-bold-600 text-color-4 tex-cen-sm">
                                 Monitize
                             </h5>
                         </div>
@@ -161,7 +161,7 @@
                     <div class="center-chip d-flex flex-column">
                         <diV class="bg-circle-chip-3"></diV>
                         <div class="mt-2">
-                            <h5 class="font-bold-600 text-color-4">
+                            <h5 class="font-bold-600 text-color-4 tex-cen-sm">
                                 Analyze
                             </h5>
                         </div>
@@ -173,7 +173,7 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex justify-content-between align-items-center ">
+            <div class="d-flex justify-content-between align-items-center elem-cen">
                 <button type="button" class="btn green-button pl-4 pr-4 round-button font-family-1">TALK TO US</button>   
             </div>
         </div>
@@ -292,12 +292,12 @@
                         <div class="row d-flex justify-content-between align-items-center pt-3">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
                                 <div class="d-flex flex-column">
-                                    <h4 class="text-color-2 font-bold-600">
+                                    <h2 class="text-color-2 font-bold-600">
                                         Want to learn more about how can
-                                    </h4>
-                                    <h4 class="text-color-2 font-bold-600">
+                                    </h2>
+                                    <h2 class="text-color-2 font-bold-600">
                                         cSMART MVNX help transform your business?  
-                                    </h4>
+                                    </h2>
                                 </div>
                             </div>
                         </div> 
