--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav class="fixed-top navbar navbar-expand-lg navbar-light backgrouns-color-pista nav-bar-back-ground">
         <div class="container d-flex align-items-end">
             <a class="navbar-brand pb-2" href="#"><img src="./assets/csmart_logo_whitecloud.svg" class="logo-size"></a>
-            <button class="navbar-toggler  " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler mb-2 " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="height: 100%!important;">
