--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                     </p>
                                 </div>
                                 <div class="d-flex flex-row">
-                                    <img src="assets/tick.svg" width="10px" height="10px" class="mt-2 ml-2">
+                                    <img src="assets/tick.svg" width="10px" height="10px" class="mt-2 mr-2">
                                     <p class="text-color-5 font-family-1 d-flex flex-row">
                                         Business houses need customers delivered to their doorstep and they are willing to pay it
                                     </p>
