--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
         </div>
     </div>
     <div>
-        <div class="backgrouns-color-green pt-5 pb-5 skew-6">
+        <div class="backgrouns-color-4  skew-6">
             <div class="non-skew-6">
-                <img src="assets/bg-2.svg" width="100%">
-                <div class="d-flex justify-content-center align-items-center banner-wrapper mt-3 ">
+                <!-- <img src="assets/bg-2.svg" width="100%" style="min-height: 320px;"> -->
+                <div class="d-flex justify-content-center align-items-center bg-m-banner">
                     <div class="container">
                         <div class="row d-flex justify-content-between align-items-center pt-3">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 d-flex flex-column justify-content-center">
