--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                             <p class="text-color-5 font-family-1 ">
                                 The subscription economy is growing. Digital transformation is reshaping broad changes within telecoms operations as Communications Service Providers (CSPs) continue to evolve into Digital Service Providers (DSPs). As service providers shift from physical products to digital services, they will need to rapidly design and monetize offerings across cloud, IoT, and future 5G services.
                             </p>
-                            <div class="d-flex justify-content-between align-items-center z-index">
+                            <div class="d-flex justify-content-between align-items-center">
                                 <button type="button" class="btn green-button pl-4 pr-4 round-button font-family-1">READ MORE</button>   
                             </div>
                         </div>
