--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <button type="button" class="btn round-button font-family-1 blue-button pl-4 pr-4">BUILD YOUR USE CASE</button>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 pb-2">
+                <form class="form-inline my-2 my-lg-0 pb-2 d-flex justify-content-between">
                     <div class="search round-button" id="search_wrapper">
                         <input id="search-box">
                         <i id="search_icon" class="fa fa-search headersearch"></i>
@@ -306,7 +306,7 @@
                                 </div>
                             </div> 
                         </div>
-                        <div class="clear:both">&nbsp;</div>
+                        <div class="clear:both" style="background-color: #FFFFFF;">&nbsp;</div>
                         <div class="down-skew"></div>
                     </div>
                 </div>
@@ -425,7 +425,7 @@
         <div class="sub-skew" id="sub-skew"></div>
     </div>
     <div class="backgrouns-color-gray-1 pt-3 pb-3">
-        <div class="container ">
+        <div class="container">
             <div class="row d-flex justify-content-between main-footer-wrapper">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 h-100 d-flex flex-column align-items-start justify-content-start footer-left">
                     <div class="d-flex flex-column">
@@ -462,8 +462,8 @@
         </div>
     </div>
     <div class="backgrouns-color-violet-1 p-2">
-        <div class="container d-flex flex-row justify-content-between" >
-            <div class="col-xl-6 col-lg-8 col-md-12 col-sm-12 col-xs-12 row d-flex align-items-center">
+        <div class="container d-flex flex-row justify-content-between footer-center" >
+            <div class="col-xl-6 col-lg-8 col-md-12 col-sm-12 col-xs-12 row d-flex align-items-center footer-center">
                 <a href="#" class="mr-2 pr-2 mb-2 footer-link ">&#169;cSMART 2020 </a>
                 <a href="#" class="mr-2 pr-2 mb-2  footer-link ">Covalensedigital</a>
                 <a href="#" class="mr-2 pr-2 mb-2  footer-link ">Privacy Policy</a>
